src/cbPyLib/cellbrowser/cbWeb/css/cellBrowser.css
/* ... */
#tpLegendHeader { background-color:#eee; color: #777; margin-top: 2px}
#tpLegendTitle { font-weight: bold }
#tpLegendSubTitle { font-size: 80%; font-style: italic }
#tpLegendCol1 { padding-left: 1px; vertical-align: middle}
#tpLegendCol2 { float: right; padding-right: 2px; padding-top:2px}
.tpLegendSelect { outline: 2px solid black }
.tpLegendLabel { display:inline; user-select: none; }
/*.tpLegendCount { display:inline-block; position: absolute; right: 4px; color: #888} */
.tpLegendCount { display:inline-block; float: right; color: #888} 
.tpLegend .tpLegendCheckbox { margin-right: 2px; margin-top: 2px}
.tpGrey { color: #bbb }

#tpLegendColorChecked,
#tpLegendAll,
#tpLegendNone,
#tpLegendInvert,
#tpLegendNotNull {
  font-size: 14px;
  margin: 1px 1px;
} 

.mpFlipbookLabel {
        font-weight:bold;
}

#mpFlipbookCont {
        background: rgba(255,255,255,0.65);
        padding: 6px 12px 12px;
        border-radius: 4px;
        width: auto !important;
        right: 12px;
}
#mpFlipbookCont #mpFlipbook {
        width: 100% !important;
}

.ui-helper-reset { font-size: 12px}
.ui-tabs { padding: 0 }
.ui-tabs { padding: 0 }
.ui-tabs-nav { border: 0 } /* color control should not be separated from tabs */
.ui-tabs .ui-tabs-panel { padding-top:5px; border:1px solid lightgray; padding:0} /* for marker panels */
.ui-tabs-anchor { padding: 3px }
.ui-tabs .ui-tabs-nav .ui-tabs-anchor { padding: 3px }

.tab-pane { padding: .4em 1em; border: 1px solid lightgrey }
.ui-corner-all { border-radius: 0px } /* dialogs */
#tpOpenDatasetButton { border-radius: 4px }
.ui-menu-item { font-size:13px }
.ui-menu .ui-menu-item-wrapper { padding: 1px 1em 1px .4em; }
.ui-tooltip { font-size: 13px }
#tpButtonInfo { height: 24px; border-radius: 4px; padding-top: 3px }
.tpDialogInput { margin-left: 12px; margin-top: 5px; margin-bottom: 12px; }
#tpDialog { z-index: 1001; }}

.tpIconButton { 
        padding: 1px 2px 1px 2px; 
        border-radius: 0; 
        height:28px; 
        width: 28px; 
        cursor: default
}

.tpRibbonButton {
        background-color: #ccc;
        color: #333;
        padding:  1px 2px 1px 2px; 
        border-radius: 4px;
        height: 24px;
        border: 1px solid #c5c5c5;
        vertical-align: top;
        text-align: center;
        margin-right: 8px;
        top: 3px;
        position: relative;
        padding-left: 4px;
        padding-right: 4px;
}

.tpClicked { background-color: #AAA }
.tpClicked:hover { background-color: #AAA }
.btn-primary.load-dataset {float: right; margin-left: 10px; color: white; font-size: 12px; margin-top: -4px;}
.list-group-item.active>.btn-primary {color: #337ab7;background-color: #fff;}
.list-group-item .badge {margin-top: -2px;}

.link,
.tpDatasetPane a { 
        text-decoration: underline; 
        color: #0000EE; 
        cursor: pointer; 
}

.tpSameLink {
    text-decoration: underline; 
    cursor: pointer; 
    color: darkgrey; 
    float: right
}

.tpDatasetPane {
        padding-top: 10px !important;
        border-radius: 4px;
}

.tpDatasetPane h4 {
        margin-top: 0;
}

/* modify bootstrap tooltip defaults */
.tooltip .tooltip-inner { 
        min-width: 220px; 
        border-radius: 0; 
        background-opacity: 50%;
        text-align: left
}

 .ui-widget-header { background: white} 
.ui-state-active { background: green }

.ui-progressbar { position: relative; }
.ui-progressbar-value { background-color: #888 }

.tpProgressLabel {
    position: absolute;
    left: 40%;
    top: 4px;
    font-weight: bold;
}

/* expression progress bar only */
.ui-progressbar {
        position: relative;
}
.progress-label {
        position: absolute;
        left: 50%;
        top: 4px;
        font-weight: bold;
        /*text-shadow: 1px 1px 0 #fff;*/
}


.context-menu-item { 
        font-size: 13px; 
        padding: 3px 
}

.contextmenu-customwidth { 
        width: 200px !important; 
        min-width: 200px !important
}

/* .tpGeneTable { 
        table-layout: fixed; 
        white-space: nowrap; 
        border-collapse:collapse 
}
*/

.tpGeneBarCell { 
        font-size: 12px; 
        color: black; 
        padding-left:1px; 
        padding-right:1px; 
        border: 1px solid #AAA;
        background: #F6;
        /*color:#AAAAAA; */
        display: inline-block;
}

.tpGeneBarCellSelected { 
        outline: 1px solid black 
}

#tpPeakListTitle { 
        padding-top: 8px;
        padding-bottom: 6px;
        padding-left: 3px;
}

#tpPeakList { 
        border-top: 1px solid #CCC; 
        border-bottom: 1px solid #CCC; 
        border-left: 1px solid #CCC; 
        margin-left: 4px;
        padding: 3px;
        padding-left: 4px;
        background-color: #EEE;
        height: 30%;
        overflow-y: scroll;
}

.tpPeak > label {
        font-weight: normal;
}

#tpPeakList > div { 
        background-color: #EEE;
}

input[type=checkbox], input[type=radio] {
        vertical-align : -2px; /* https://stackoverflow.com/a/2806786/233871 */
}


.tpSidebarHeader { 
        font-weight: bold; 
        padding-left: 4px; 
        font-size: 16px; 
        padding-top: 4px; 
        height: 25px; 
        background-color: white; 
        text-align: center
}

#tpLeftSidebar { 
        border-right: 1px solid #D7D7D7; 
        height: 100%
}
#tpLeftSidebar .ui-tabs-anchor {
        /* jquery UI tabs label */
        font-size: 14px
}

#tpSideMeta { padding-left: 2px}

#tpMetaPanel { 
        background-color: white;
        height: 100%;
        overflow-y: auto;
}

#tpLegendRows {
        width: 100%;
        overflow-y: auto;
        /* height: 100%; */
}

#tpLegendContent { 
        width: 100%;
        height: 100%;
        overflow-y: scroll;
}

#tpLeftTabs { 
        border: 0; 
        height: 100%;
}

#tpGeneTab, #tpAnnotTab, #tpLayoutTab { 
        border-top: 1px solid #AAA;
        padding:0;
        padding-top: 5px;
        height: 100%;
        overflow-y: auto;
}
/* ... */

